crates/wac-parser/tests/resolution/fail/invalid-use-alias.wac
interface a {
    type a = u32;
}

interface b {
    type b = u32;
    use a.{a as b};
}